<resources>
    <string name="app_name">Polygon puzzle: Sport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="share">Share</string>
    <string name="download_draw">Download</string>
    <string name="downloadImage">Download complete</string>

    <!--Game menu-->
    <string name="restart">Reset image</string>
    <string name="setting">Setting</string>
    <string name="center">Center</string>
    <string name = "restart_er"> Click again to confirm the action. </string>

    <!--Setting-->
    <string name="path_color">Path color</string>
    <string name="numbers_color">Numbers color</string>
    <string name="difficulty">Difficulty</string>
    <string name="end">End</string>
    <string name="set_color">Select color</string>

    <string name="isnotgranted">Uploading files is prohibited!</string>
    <string name="isgranted">File uploads allowed!</string>

    <!--Instruction-->
    <string name="instruction">Instruction</string>
    <string name = "i1">Drag the triangle to the right place by number. </string>
    <string name="i2">Hold with two fingers and zoom in or out. </string>
    <string name="i3">Click \"Center\" to return the figureScale and position to its original state. </string>
    <string name="i4">In the settings, set the complexity, the higher the value, the easier it will be to hit the triangle, as well as the colors of the outline and numbers that are convenient for you. </string>

    <!--Privacy policy-->
    <string name="action_policy">Privacy policy</string>
    <string name="pp">"Privacy Policy

Your privacy is important
Use of collected user information
We use the collected information solely for the purpose of tracking bugs, improving the Application functionality and enhancing user experience.
We also use Google Admob SDK and AppMetrika SDK for advertisements in our applications.

Personal Information
We do not collect, store or use any personal information while you visit, download or upgrade our products.
We may use personal information submitted by you only for the following purposes: help us develop, deliver, and improve our products and services and supply higher quality service; manage online surveys and other activities you’ve participated in.
In the following circumstances, we may disclose your personal information according to your wish or regulations by law:
•  Your prior permission;
•  By the applicable law within or outside your country of residence, legal process, litigation requests;
•  By requests from public and governmental authorities;
•  To protect our legal rights and interests.

Sensitive Information
We ask that you not send us, and you not disclose, any sensitive Personal Information (e.g., information related to racial or ethnic origin, political opinions, religion or other beliefs, health, sexual orientation, criminal background or membership in past organizations, including trade union memberships) on or through an Application, the Services or the Site or otherwise to us.

Children
We do not provide service focus on Children. If you are under 13, you may use our application or services when you are with a parent or guardian.

Modifications to this privacy
This Privacy Policy may be revised periodically. Notices will be sent to users to advise the changes.

CONTACTING US / REPORTING VIOLATIONS
If you have any questions or comments about this Policy or our privacy practices, or to report any violations of the Policy or abuse of an Application, please contact us at."</string>





    <string name="init_ad">ca-app-pub-7035969394494642~2540352292</string>
    <string name="wag_native_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
